Privacy notice link contrast fixed in global CSS because of js compilation error

--- a/src/styles/global.scss
+++ b/src/styles/global.scss
@@ -437,6 +437,9 @@ span.icon {
 .color-link {
   color: $link !important;
 }
+.color-white {
+  color: #FFF;
+}
 
 .download-button {
   color: $link;
